--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,13 @@ nav a:hover {
     width: 100%;
     padding: 32px;
 }
-
+.logo {
+    display: block;
+    margin: auto;
+    background-color: #999;
+    border-radius: 50%;
+    height: 264px;
+}
 .front-page h1 {
     font-size: 3em;
     margin-bottom: 12px;
